# pico4ml-compass

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  compass.c
src/lib/: ICM20948.c  ICM20948.h
